--- a/main/src/main/resources/templates/index.html
+++ b/main/src/main/resources/templates/index.html
@@ -6,14 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .content{
+            width: 100px;
+            padding: 5px 10px;
+            background-color: skyblue;
+            display: flex;
+            justify-content: space-between;
+        }
+    </style>
 </head>
 
 <body>
 <div id="main" style="width: 600px;height:400px;">
-    Hello world
+    <!-- Hello world
     <br>
     <a href="/upload">上传表单</a>
+    <div class="content">
+        <span>用</span>
+        <span>户</span>
+        <span>码</span>
+    </div>
+    <div class="content">
+        <span>密</span>
+        <span>码</span> 
+    </div> -->
+    <h1>你好</h1>
+    <a href="/login">登录账号</a>
+    <a href="/register">注册账号</a>
 </div>
+<script src="/static/js/echarts.js"></script>
 </body>
 
 </html>
