--- a/main/src/main/resources/templates/data.html
+++ b/main/src/main/resources/templates/data.html
@@ -94,7 +94,7 @@
             <div id="yiqing_data_block">
                 <div class="title">
                     <h4>国外疫情</h4>
-                    <span>数据更新至 <span>2020.11.26 14:26</span> </span>
+                    <span>数据更新至 <span th:text="${data.time}">2020.11.26 14:26</span> </span>
                 </div>
                 <div id="box" class="content">
                     <div class="info_block">
