--- a/main/src/main/resources/templates/login.html
+++ b/main/src/main/resources/templates/login.html
@@ -8,8 +8,24 @@
     <title>用户登录</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        body {
+            background-color: rgb(74, 147, 245);
+        }
+
+        .content {
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
         .login_wrapper {
-            margin-top: 200px;
+            width: 350px;
+            align-self: center;
+            /* margin-top: 240px; */
+            background-color: white;
+            padding: 20px 30px;
+            border-radius: 10px;
         }
 
         .button_wrapper {
@@ -18,62 +34,77 @@
             justify-content: space-between;
         }
 
+        .error {
+            color: rgb(200, 46, 46)
+        }
+
         .form-group {
+            margin-top: 10px;
             margin-bottom: 20px;
         }
     </style>
 </head>
 
 <body>
+
     <div class="content">
-        <div class="container">
-            <div class="row">
-                <div class="col-3 offset-4">
-                    <div class="login_wrapper">
-                        <div class="form-group">
-                            <label for="username">用户名</label>
-                            <input type="text" class="form-control" id="username">
-                        </div>
-                        <div class="form-group">
-                            <label for="password">密码</label>
-                            <input type="password" class="form-control" id="password">
-                        </div>
-                        <div class="form-group">
-                            <div class="button_wrapper">
-                                <button type="button" id="login_button" style="width: 40%"
-                                    class="btn btn-primary">登录</button>
-                                <button type="button" id="go_register" style="width: 40%" class="btn btn-success">
-                                    注册
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+        <div class="login_wrapper">
+            <h2 class="title">用户登录</h2>
+            <div class="form-group">
+                <!-- <label for="username">用户名</label> -->
+                <input autocomplete="off" placeholder="请输入用户名 " type="text" class="form-control" id="username">
+                <span class="error" id="usernameError"></span>
+            </div>
+            <div class="form-group">
+                <!-- <label for="password">密码</label> -->
+                <input type="password" placeholder="请输入密码" class="form-control" id="password">
+                <span class="error" id="passwordError"></span>
+            </div>
+            <div class="form-group">
+                <div class="button_wrapper">
+                    <button type="button" id="login_button" style="width: 40%" class="btn btn-primary">登录</button>
+                    <button type="button" id="go_register" style="width: 40%" class="btn btn-success">
+                        注册
+                    </button>
                 </div>
             </div>
         </div>
     </div>
     <script src="/static/js/bootstrap.min.js"></script>
     <script>
-        // 判断是否为空
-        function isBlank(value) {
-            if (value) {
-                if (value.trim() != '') {
-                    return false
-                }
+        function checkDataIsComple(user) {
+            let flag = true
+            if (!user.username || user.username.trim() == "") {
+                document.getElementById("usernameError").innerText = '用户名为空'
+                flag = false
+            } else {
+                document.getElementById("usernameError").innerText = ''
             }
-            return true
+
+            if (!user.password || user.password.trim() == "") {
+                document.getElementById("passwordError").innerText = '密码为空'
+                flag = false
+            } else {
+                document.getElementById("passwordError").innerText = ''
+            }
+
+            return flag
         }
 
         document.getElementById("go_register").onclick = function (e) {
             window.location.href = '/register'
         }
 
+        // 登录处理
         document.getElementById("login_button").onclick = function (e) {
             let username = document.getElementById("username").value
             let password = document.getElementById("password").value
 
-            if (isBlank(username) || isBlank(password)) {
-                return alert("用户名或密码为空")
+            let user = { username, password }
+
+            if (!checkDataIsComple(user)) {
+                console.log("表单信息不完整")
+                return;
             }
 
             let request = new XMLHttpRequest()
@@ -84,18 +115,15 @@
                 if (request.readyState == 4 && request.status == 200) {
                     let data = JSON.parse(request.responseText)
                     if (data.code == 200) {
-                        location.href = '/data'
+                        location.href = '/'
                     } else {
-                        alert(data.message)
+                        document.getElementById("passwordError").innerText = '密码错误'
                     }
                     console.log(data)
                 }
             }
 
-            request.send(JSON.stringify({
-                username,
-                password
-            }))
+            request.send(JSON.stringify(user))
         }
     </script>
 </body>
